--- a/GoogleApisSample/index.html
+++ b/GoogleApisSample/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>TypeScript HTML App</h1>
     <div>
-        <ul class="nav nav-pills nav-stacked nav-year"></ul>
+        <ul class="nav nav-pills nav-stacked nav-cours"></ul>
     </div>
     
     <div id="content"></div>
